# rag-on-azure-tuto

data_ingestion/: Makefile  api.py  config.py  env.example  ingest.py  models.py  pyproject.toml
